Solved problem with z-index and apply button
The 3d transform was interfering with the z-index property, some
logic has been implemented in order to reset the class of the
slider to slider and avoid having the transform property when the
slider is not repositioning itself. This allows us to have only
clickable buttons when the transition has been completed.

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -44,12 +44,14 @@
   composes: large-rect;
   background-color: $lightblue;
   position: absolute;
-  z-index: 999;
+  z-index: 20;
 }
 
 .add {
   composes: large-rect;
   background-color: $red;
+  transform-style: preserve-3d;
+  transform: translateZ(1em);
 }
 
 .settings {
